--- a/app/views/smartrent/pages/faq.html.erb
+++ b/app/views/smartrent/pages/faq.html.erb
@@ -23,7 +23,7 @@
       </div>
       <div class="answer">
         <p>
-           You can also go to <%= link_to "Find a SmartRent Apartment", find_apartments_path %> at any time to find the list of participating communities, or feel free to check with your Property Manager.  If a community is Bozzuto owned (or the owner has opted in) and is located in the DMV area, it will be a part of the SmartRent program.
+           A: You can also go to <%= link_to "Find a SmartRent Apartment", find_apartments_path %> at any time to find the list of participating communities, or feel free to check with your Property Manager.  If a community is Bozzuto owned (or the owner has opted in) and is located in the DMV area, it will be a part of the SmartRent program.
         </p>
       </div>
     </div>
@@ -40,7 +40,7 @@
       </div>
       <div class="answer">
         <p>
-          Each participating resident accrues $350/month, with a $10,000 maximum for a home purchased within 24 months of living in a Bozzuto residence.
+          A: Each participating resident accrues $350/month, with a $10,000 maximum for a home purchased within 24 months of living in a Bozzuto residence.
         </p>
       </div>
     </div>
@@ -57,7 +57,7 @@
       </div>
       <div class="answer">
         <p>
-         Yes. However, if you chose to use your realtor, your Smart Rent credits will be reduced by 50%.
+         A: Yes. However, if you chose to use your realtor, your Smart Rent credits will be reduced by 50%.
         </p>
       </div>
     </div>
@@ -74,7 +74,7 @@
       </div>
       <div class="answer">
         <p>
-         After you activate their accounts with the e-mail address used on your lease (under the primary leaseholder), you may access your account statement 24/7 at <%= link_to root_url, root_url %>. You will also receive a monthly SmartRent statement via e-mail.
+         A: After you activate their accounts with the e-mail address used on your lease (under the primary leaseholder), you may access your account statement 24/7 at <%= link_to root_url, root_url %>. You will also receive a monthly SmartRent statement via e-mail.
         </p>
       </div>
     </div>
@@ -91,7 +91,7 @@
       </div>
       <div class="answer">
         <p>
-         A:SmartRent funds may be used in conjunction with other promotional programs offered at certain Bozzuto Homes communities.
+         A: SmartRent funds may be used in conjunction with other promotional programs offered at certain Bozzuto Homes communities.
         </p>
       </div>
     </div>
@@ -108,7 +108,7 @@
       </div>
       <div class="answer">
         <p>
-         A:SmartRent funds can be used towards closing costs to reduce total out of pocket expense. They cannot replace the required earnest money deposit funds or interim deposits due during the purchase process.
+         A: SmartRent funds can be used towards closing costs to reduce total out of pocket expense. They cannot replace the required earnest money deposit funds or interim deposits due during the purchase process.
         </p>
       </div>
     </div>
@@ -125,7 +125,7 @@
       </div>
       <div class="answer">
         <p>
-         SmartRent credits are available for up to 24 months after a resident moves out of a Bozzuto property.
+         A: SmartRent credits are available for up to 24 months after a resident moves out of a Bozzuto property.
         </p>
       </div>
     </div>
@@ -142,7 +142,7 @@
       </div>
       <div class="answer">
         <p>
-         Yes. However, SmartRent funds cannot be used with the purchase of a moderately priced home (MPDU) as provided through various county programs. Some communities (Uplands in Baltimore, MD) will allow a 50% SmartRent credit usage due to the partnership with Baltimore City which lowers purchase prices.
+         A: Yes. However, SmartRent funds cannot be used with the purchase of a moderately priced home (MPDU) as provided through various county programs. Some communities (Uplands in Baltimore, MD) will allow a 50% SmartRent credit usage due to the partnership with Baltimore City which lowers purchase prices.
         </p>
       </div>
     </div>
@@ -154,12 +154,12 @@
     <div class="qa">
       <div class="question">
         <p>
-          If I choose not to buy a Bozzuto Home, am I able to get the credit in cash to use towards buying a home from a different builder?
+          A: If I choose not to buy a Bozzuto Home, am I able to get the credit in cash to use towards buying a home from a different builder?
         </p>
       </div>
       <div class="answer">
         <p>
-         No, these credits are not equal to cash and may only be used towards a Bozzuto Home purchase.
+         A: No, these credits are not equal to cash and may only be used towards a Bozzuto Home purchase.
         </p>
       </div>
     </div>
@@ -176,7 +176,7 @@
       </div>
       <div class="answer">
         <p>
-         If you have any further questions, please contact Mary Smith at <a href="mailto:mary.smith@bozzuto.com">mary.smith@bozzuto.com</a>
+         A: If you have any further questions, please contact Mary Smith at <a href="mailto:mary.smith@bozzuto.com">mary.smith@bozzuto.com</a>
         </p>
       </div>
     </div>
