--- a/app/views/smartrent/pages/faq.html.erb
+++ b/app/views/smartrent/pages/faq.html.erb
@@ -74,7 +74,7 @@
       </div>
       <div class="answer">
         <p>
-         A: After you activate their accounts with the e-mail address used on your lease (under the primary leaseholder), you may access your account statement 24/7 at <%= link_to "bozzutosmartrent.com", root_url %>. You will also receive a monthly SmartRent statement via e-mail.
+         A: After you activate your accounts with the e-mail address used on your lease (under the primary leaseholder), you may access your account statement 24/7 at <%= link_to "bozzutosmartrent.com", root_url %>. You will also receive a monthly SmartRent statement via e-mail.
         </p>
       </div>
     </div>
