--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -43,21 +43,21 @@
           font-size: 1.2em;
         }
         .sr-box .sr-box-body{
-          text-align: justify;
+          text-align: left;
         }
       </style>
       <h1 class="sr-page-title"> You do the renting. We do the saving. </h1>
       <div>
-      With the Bozzuto SmartRent program, purchasing a brand <%= link_to "new home" ,find_a_new_home_path  %> is well within reach. Each month that you rent from a Bozzuto participating property, you'll earn a $350 contribution, for a maximum of $10,000, towards the purchase of a brand new <%= link_to "Bozzuto Home", find_a_new_home_path %>. Simple as that. Bozzuto SmartRent credits are applied towards the out-of-pocket costs associated with building a new home, helping to jump start your savings plan. Best of all, theres no cost to you and enrollment is automatic.
+      With the Bozzuto SmartRent program, purchasing a brand <%= link_to "new home" ,'https://www.bozzuto.com/new-homes/communities'  %> is well within reach. Each month that you rent from a Bozzuto participating property, you'll earn a $350 contribution, for a maximum of $10,000, towards the purchase of a brand new <%= link_to "Bozzuto Home", find_a_new_home_path %>. Simple as that. Bozzuto SmartRent credits are applied towards the out-of-pocket costs associated with building a new home, helping to jump start your savings plan. Best of all, there's no cost to you and enrollment is automatic.
       </div>
       <div>
         <div class="sr-col-2">
         <ul>
             <li>Your rent stays the same, whether you choose to take advantage of SmartRent or not.</li>
             <li> You will receive monthly email statements to let you know how your credits are adding up.</li>
-            <li> Bozzuto Homes are located throughout the D.C., Baltimore, and Annapolis areas and include distinctive condominium, townhome, and single-family home communities.</li>
+            <li> Bozzuto Homes are located throughout the D.C., Baltimore and Annapolis areas and include distinctive condominium, townhome, and single-family home communities.</li>
         </ul>
-        You may use SmartRent credits for up to 24 months are leaving a Bozzuto apartment property.
+        You may use SmartRent credits for up to 24 months after leaving a Bozzuto apartment property.
         </div>
         <div class="sr-col-2 sr-col-right">
           <div class="sr-box">
@@ -65,7 +65,7 @@
               The most fun perk of all:
             </div>
             <div class="sr-box-body">
-              Bozzuto SmartRenters get priority access to new Bozzuto Homes communities through Bozzuto Backstage. This program gives members behind-the-scenes access to community info, release dates, events, sneak peek tours, and special appointment times before we're open to the public! In addition, Backstage members have the ability to reserve and purchase their home before the public at the lowest base prices available and with special Backstage incentives. It doesn't get much better than that!
+              Bozzuto SmartRenters get priority access to new Bozzuto Homes communities through Bozzuto Backstage. This program gives members behind-the-scenes access to community info, release dates, events, sneak peek tours and special appointment times before we're open to the public! In addition, Backstage members have the ability to reserve and purchase their home before the public at the lowest base prices available and with special Backstage incentives. It doesn't get much better than that!
           </div>
           </div>
         </div>
