Added blog to site footer

--- a/app/views/layouts/smartrent/_footer.html.erb
+++ b/app/views/layouts/smartrent/_footer.html.erb
@@ -59,6 +59,7 @@
                         <li><a href="https://www.bozzuto.com/about-us/values">Values</a></li>
                         <li><a href="https://www.bozzuto.com/careers">Careers</a></li>
                         <li><a href="https://www.bozzuto.com/about-us/news-and-press">News &amp; Awards</a></li>
+                        <li><a href="https://blog.bozzuto.com/">Blog</a></li>
                       </ul>
                     </section>
                   </div>
