remove the left search nav

--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -638,9 +638,11 @@ label{
   color:#565C64;
 }
 #contactLeft {
-  width:286px;
+  /*width:286px;*/
   float:left;
   margin-top:25px;
+  visibility: hidden; 
+  width: 150px;
 }
 #contactRight {
   width:100%;
