--- a/app/views/smartrent/properties/_filters.html.erb
+++ b/app/views/smartrent/properties/_filters.html.erb
@@ -1,4 +1,4 @@
-<div id="contactLeft">
+<div id="contactLeft" style="visibility: hidden; width: 150px;">
   <div id="search">
     <%= search_form_for @q, {:class => "property_listing", :remote => true} do |f|%>
       <div class="searchTitle">
