New Homes to Eligible Homes

--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -15,7 +15,7 @@
           <a href="/faq">FAQ’s</a>
         </li>
         <li class="site-header__main-nav__item">
-          <a target="_blank" href="https://www.bozzuto.com/new-homes/communities">New Homes</a>          
+          <a target="_blank" href="https://www.bozzuto.com/new-homes/communities">Eligible Homes</a>
         </li>
         <li class="site-header__main-nav__item">
           <a href="/official-rules">Official Rules</a>
