fix in copy edits

--- a/app/views/smartrent/properties/index.html.erb
+++ b/app/views/smartrent/properties/index.html.erb
@@ -1,6 +1,6 @@
 <%= render layout: "layout" do %>
 <section class="wrapper clearfix">
-  <%= render partial: "filters"%>
+  <% render partial: "filters"%>
   <div id="contactRight">
     <p>Earn SmartRent credits while leasing one of these properties.</p>
 
@@ -22,7 +22,7 @@
         <%= render partial: "search_results" %>
       </div>
     </div>
-    <div id="map" class="results map-results"></div>
+    <!-- <div id="map" class="results map-results"></div> -->
   </div>
 </section>
 <% end %>
