Revert "Menu Changes"
This reverts commit 3a5c1a3def8d97f93590236867b9aaad476cb891.

Conflicts:
	app/views/layouts/smartrent/_header.html.erb

--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -9,16 +9,18 @@
       </div>
       <ul class="site-header__main-nav__list js-mainNav">
         <li class="site-header__main-nav__item">
-          <a href="/find-a-smartrent-apartment">Participating Apartments</a>
+          <a href="/faq">Why SmartRent?</a>          
         </li>
         <li class="site-header__main-nav__item">
-          <a href="/faq">FAQ’s</a>
+          <a href="/find-a-smartrent-apartment">Smartrent Apartments</a>
         </li>
         <li class="site-header__main-nav__item">
-          <a target="_blank" href="https://www.bozzuto.com/new-homes/communities">Eligible Homes</a>
+
+          <a href="/find-a-new-home">New Homes</a>
+
         </li>
         <li class="site-header__main-nav__item">
-          <a href="/official-rules">Official Rules</a>
+          <a href="/smartrent-quick-program-rules">Program Rules</a>
         </li>
         <%if controller_name.to_s != "sessions"%>
         <li class="site-header__main-nav__search js-headerSearchFormToggle">
