Revert "Revert "Menu Changes""
This reverts commit 461dddf6eb41b9b4f2e49b2adf12ad6a080ff451.

--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -9,18 +9,16 @@
       </div>
       <ul class="site-header__main-nav__list js-mainNav">
         <li class="site-header__main-nav__item">
-          <a href="/faq">Why SmartRent?</a>          
+          <a href="/find-a-smartrent-apartment">Participating Apartments</a>
         </li>
         <li class="site-header__main-nav__item">
-          <a href="/find-a-smartrent-apartment">Smartrent Apartments</a>
+          <a href="/faq">FAQ’s</a>
         </li>
         <li class="site-header__main-nav__item">
-
-          <a href="/find-a-new-home">New Homes</a>
-
+          <a target="_blank" href="https://www.bozzuto.com/new-homes/communities">Eligible Homes</a>
         </li>
         <li class="site-header__main-nav__item">
-          <a href="/smartrent-quick-program-rules">Program Rules</a>
+          <a href="/official-rules">Official Rules</a>
         </li>
         <%if controller_name.to_s != "sessions"%>
         <li class="site-header__main-nav__search js-headerSearchFormToggle">
