--- a/app/views/smartrent/pages/faq.html.erb
+++ b/app/views/smartrent/pages/faq.html.erb
@@ -154,7 +154,7 @@
     <div class="qa">
       <div class="question">
         <p>
-          A: If I choose not to buy a Bozzuto Home, am I able to get the credit in cash to use towards buying a home from a different builder?
+          If I choose not to buy a Bozzuto Home, am I able to get the credit in cash to use towards buying a home from a different builder?
         </p>
       </div>
       <div class="answer">
