change external link

--- a/app/views/smartrent/pages/_homes_slider.html.erb
+++ b/app/views/smartrent/pages/_homes_slider.html.erb
@@ -8,7 +8,7 @@
       <% end %>
       
       <div class="propertySlide">
-        <%= link_to home_path(home) do %>
+        <%= link_to home.website do %>
           <%= image_tag home.image(:home_page) %>
           <div class="caption">
             <strong><%= home.title %></strong>
