enable form fields

--- a/app/views/smartrent/admin/homes/_form.html.erb
+++ b/app/views/smartrent/admin/homes/_form.html.erb
@@ -8,7 +8,7 @@
           <label class="col-md-4 control-label"></label>
           <div class="col-md-7">
             <div class="well well-sm">
-              Some of the fields (which is disabled) in this form are being automatically updated by the Bozzuto.com XML feed.
+              <!-- Some of the fields (which is disabled) in this form are being automatically updated by the Bozzuto.com XML feed.
 
               <br><br>
               The following fields can be edited and will not be replaced by the XML feed: <br>
@@ -19,7 +19,7 @@
               - Image <br>
               - Image Description <br>
               - Position <br>
-              - Is Visible <br>
+              - Is Visible <br> -->
             </div>
           </div>
         </div>
@@ -30,7 +30,7 @@
       <div class="form-group">
         <%= f.label :title, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.text_field :title, :class => "form-control", :disabled => true %>
+          <%= f.text_field :title, :class => "form-control" %>
         </div>
       </div>
     </div>
@@ -46,7 +46,7 @@
       <div class="form-group">
         <%= f.label :video_url, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.url_field :video_url, :class => "form-control", :disabled => true %>
+          <%= f.url_field :video_url, :class => "form-control" %>
         </div>
       </div>
     </div>
@@ -54,7 +54,7 @@
       <div class="form-group">
         <%= f.label :phone_number, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.text_field :phone_number, :class => "form-control", :disabled => true %>
+          <%= f.text_field :phone_number, :class => "form-control" %>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
       <div class="form-group">
         <%= f.label :address, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.text_field :address, :class => "form-control", :disabled => true %>
+          <%= f.text_field :address, :class => "form-control" %>
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
       <div class="form-group">
         <%= f.label :city, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.text_field :city, :class => "form-control", :disabled => true %>
+          <%= f.text_field :city, :class => "form-control" %>
         </div>
       </div>
     </div>
@@ -78,7 +78,7 @@
       <div class="form-group">
         <%= f.label :state, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.text_field :state, :class => "form-control", :disabled => true %>
+          <%= f.text_field :state, :class => "form-control" %>
         </div>
       </div>
     </div>
@@ -86,7 +86,7 @@
       <div class="form-group">
         <%= f.label :website, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.url_field :website, :class => "form-control", :disabled => true %>
+          <%= f.url_field :website, :class => "form-control" %>
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
       <div class="form-group">
         <%= f.label :latitude, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.text_field :latitude, :class => "form-control", :disabled => true %>
+          <%= f.text_field :latitude, :class => "form-control" %>
         </div>
       </div>
     </div>
@@ -126,7 +126,7 @@
       <div class="form-group">
         <%= f.label :longitude, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.text_field :longitude, :class => "form-control", :disabled => true %>
+          <%= f.text_field :longitude, :class => "form-control" %>
         </div>
       </div>
     </div>
