--- a/app/views/smartrent/pages/faq.html.erb
+++ b/app/views/smartrent/pages/faq.html.erb
@@ -23,7 +23,7 @@
       </div>
       <div class="answer">
         <p>
-           A: You can also go to <%= link_to "Find a SmartRent Apartment", find_apartments_path %> at any time to find the list of participating communities, or feel free to check with your Property Manager.  If a community is Bozzuto owned (or the owner has opted in) and is located in the DMV area, it will be a part of the SmartRent program.
+           A: You can go to <%= link_to "Find a SmartRent Apartment", find_apartments_path %> at any time to find the list of participating communities, or feel free to check with your Property Manager.  If a community is Bozzuto owned (or the owner has opted in) and is located in the DMV area, it will be a part of the SmartRent program.
         </p>
       </div>
     </div>
