--- a/app/views/smartrent/pages/_homes_slider.html.erb
+++ b/app/views/smartrent/pages/_homes_slider.html.erb
@@ -1,4 +1,8 @@
-<div id="slides">
+<% if params[:action] == "statement"  %>
+<div id="slides" style="float:left;">
+<% else %>
+<div id="slides" style="float:right;>
+<% end  %>
   <div class="slides_container">
   <% home_count =  params[:action] == "statement" ? 3 : 4 %>
     <% i = 0 %>
