styles added smartrent
(cherry picked from commit d22197e7e704b867f5bcdb6130e46be04f80584e)

Conflicts:
	app/assets/stylesheets/smartrent/layout.css.erb

--- a/app/views/smartrent/pages/_homes_slider.html.erb
+++ b/app/views/smartrent/pages/_homes_slider.html.erb
@@ -1,8 +1,6 @@
-<% if params[:action] == "statement"  %>
-<div id="slides" style="float:left;">
-<% else %>
-<div id="slides" style="float:right;>
-<% end  %>
+
+
+<div id="slides">
   <div class="slides_container">
   <% home_count =  params[:action] == "statement" ? 3 : 4 %>
     <% i = 0 %>
