--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -252,8 +252,7 @@ label{
 #contentWrapper #homeContent{
   width: 770px;
   position: relative;
-  left: 274px;
-  margin:20px 0 0 0;
+  margin-left: 25%;
 }
 
 
