--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -252,7 +252,8 @@ label{
 #contentWrapper #homeContent{
   width: 770px;
   position: relative;
-  margin-left: 25%;
+  left: 274px;
+  margin:20px 0 0 0;
 }
 
 
