--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -118,7 +118,7 @@
         }
       </style>
   <div id="tpopup">
-    <img src="assets/Emblem-Bozzuto_Image_270x600_V2.jpg"> 
+    <%=  image_tag "Emblem-Bozzuto_Image_270x600_V2.jpg" %> 
     <div id="tclose">X</div>    
   </div>
 
