--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -89,7 +89,8 @@
           max-width:770px;
           width:90%;
         }
-        @media only screen and (max-width: 1120px) and (min-width:1131px){
+        #contentWrapper.homeContentWrap #homeContent + #slides{width: 100%;}
+        @media only screen and (max-width: 1120px) and (min-width:1145px){
             .homeBanner.banner .fixedWidth .images .left{max-width: calc(100% - 880px);}
         }
         @media only screen and (max-width: 1120px){
