--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -90,9 +90,9 @@
           width:90%;
         }
         #contentWrapper.homeContentWrap #homeContent + #slides{width: 100%;}
-        @media only screen and (min-width: 1120px) and (max-width:1150px){
+        /*@media only screen and (min-width: 1120px) and (max-width:1150px){
             .homeBanner.banner .fixedWidth .images .left{max-width: calc(100% - 880px);}
-        }
+        }*/
         @media only screen and (max-width: 1120px){
             /*#contentWrapper.homeContentWrap > .fixedWidth{
               max-width:880px;
